src/index.css
/* ... */
/*---------------------------------------------------------------------------------------------------------*/
/* This is where my CSS styling starts! */
/*---------------------------------------------------------------------------------------------------------*/

.heading {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
}

#portrait {
  display: flex;
  justify-content: center;
  width: 22%;
  clip-path: circle();
}

nav {
  margin-top: 0.5vw;
  margin-bottom: 1.5vw;
}

nav ul {
  list-style: none;
  padding-left: 0;
}

nav li {
  display: inline;
  margin: 1.2vw;
}

.nav_links {
  color: #FAF9F6;
  background: #333;
  text-decoration: none;
  font-size: 2.2vw;
  border-radius: 5vw;
  padding: 0.4vw 1vw;
  
  margin-right: 1vw;
  margin-left: 1vw;
}

/*---------------------------------------------------------------------------------------------------------*/
/* Styling the header interactivity! */
/*---------------------------------------------------------------------------------------------------------*/

#container {
  display: inline-block;
}

.typewriter {
  color:#333;
  font-size: 5vw;
  border-right: 5px solid;

  margin-top: 0vw;
  margin-bottom: 1vw;

  /* animation steps */
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  animation: 
    typing 2s,
    cursor .4s step-end infinite alternate;
}

/* cursor blinking when typing animation proceeds */
@keyframes cursor {
  50% {
    border-color: transparent;
  }
}

/* typing effect */
@keyframes typing {
  from {
    width: 0;
  }
}

/* transparent text */
.typewriter span {
  background-image: 
    linear-gradient(
      to right,
      #5C6E3D,
      #A3B18A,
      #8D9F6C,
      #5C6E3D,
      #A3B18A,
      #8D9F6C,
      #5C6E3D,
      #A3B18A,
      #8D9F6C,
      #5C6E3D
    );

  -webkit-background-clip: text;
  background-clip: text;
  color: transparent;
  background-size: 200%;
  animation: animate 4s ease infinite;
}

/* text enlarge when hovered on */
.grow { 
  transition: all .2s ease-in-out; 
}

.grow:hover { 
  font-size: 1.2em; 
}

/* animated portfolio effect */
@keyframes animate {
  from {
    background-position: 0;
  }
  to {
    background-position: 200%;
  }
}


/*---------------------------------------------------------------------------------------------------------*/
/* Styling the nav bar interactivity */
/*---------------------------------------------------------------------------------------------------------*/

.active {
  background-color: #A3B18A; /* nice sage green for button selection */
  text-decoration: underline;
}

nav ul li a:hover {
  transition: all .2s ease-in-out; 
  background-color: #A3B18A; 
}

nav ul li a:focus {
  outline: #A3B18A double 3px;
}

/*---------------------------------------------------------------------------------------------------------*/
/* Styling the image track */
/*---------------------------------------------------------------------------------------------------------*/

#image-track .image {
  width: 40vmin;
  height: 56vmin;
  object-fit: cover;
  object-position: center;
}

#image-track {
  display: flex;
  gap: 4vmin;
  transform: translate(0%);
}

/* StackOverflow get rid of image selection (blue highlight) */
/* https://stackoverflow.com/questions/16432909/remove-blue-highlight-over-html-image-when-clicked */
*::selection 
{
    background-color:transparent;
} 
*::-moz-selection
{
    background-color:transparent;
}
*
{        
    -webkit-user-select: none;
    -moz-user-select: -moz-none;
    /*IE10*/
    -ms-user-select: none;
    user-select: none;
}    
input[type="text"], textarea, [contenteditable]
{

    -webkit-user-select: text;
    -moz-user-select: text;
    -ms-user-select: text;
    user-select: text;
}

/*---------------------------------------------------------------------------------------------------------*/
/* Styling the projects page */
/*---------------------------------------------------------------------------------------------------------*/

.projects_list {
  display: flex;
  flex-direction: column;

  list-style: none;
  padding-left: 0;
  gap: 1vw;
}

.projects_list li {
  display: flex;
  flex-direction: column;

  border: #333 double 1vw;
  padding: 1vw;

  gap: 1.5vw;
  margin-top: 1.2vw;
  margin-bottom: 1.2vw;
}

.projects_list img {
  width: 100%;
}

.projects_list h2 {
  padding: 0px; 
  margin-left: 1vw;

  margin-top: 0.2vw;
  margin-bottom: 0.2vw;
  font-size: 3vw;
}

.projects_list h3 {
  padding: 0px; 
  margin-left: 1vw;

  margin-top: 0.4vw;
  margin-bottom: 0.4vw;
  font-size: 2vw;
}

.projects_list p {
  padding: 0px; 
  margin: 1vw;

  margin-top: 0.4vw;
  margin-bottom: 0.4vw;
  font-size: 1.8vw;
}


/*---------------------------------------------------------------------------------------------------------*/
/* Styling the experiences page */
/*---------------------------------------------------------------------------------------------------------*/

.experiences_list {
  display: flex;
  flex-direction: column;

  list-style: none;
  padding-left: 0;
  gap: 1vw;
}

.experiences_list li {
  display: flex;
  flex-direction: row;

  border: #333 solid 0.75vw;
  padding: 1vw;

  gap: 1.5vw;
  margin-top: 1.2vw;
  margin-bottom: 1.2vw;
}

.experiences_list img {
  height: 20vw;
  width: 20vw;
}

/* animating images when hovered */
#kitlab {
  transition: all .2s ease-in-out; 
}

#kitlab:hover {
  transform: scale(1.1);
  filter:saturate(1.25);
}

#tartanlogo {
  transition: all .2s ease-in-out; 
}

#tartanlogo:hover {
  transform: scale(1.1);
  filter:saturate(1.25);
}

#howmet {
  transition: all .2s ease-in-out; 
}

#howmet:hover {
  transform: scale(1.1);
  filter:saturate(1.25);
}

.experiences_list a {
  color: #333;
  text-decoration: underline;
  text-shadow: 0.04em 0.03em 0.04em #2F4F4F;
  
  padding: 0px; 
  margin-left: 1vw;

  margin-top: 0.2vw;
  margin-bottom: 0.2vw;
  font-size: 3vw;
}
/* ... */

